--- a/apps/nodebackend/package.json
+++ b/apps/nodebackend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@repo/common": "*",
     "@types/express": "^4.17.21",
     "express": "^4.19.2"
   }
